eslint-prettier setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,16 @@
     "ecmaVersion": 2018
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": ["error", { "singleQuote": true }],
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "never",
+        "objects": "never",
+        "imports": "never",
+        "exports": "never",
+        "functions": "never"
+      }
+    ]
   }
 }
