--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server",
     "server": "nodemon server",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"**/*.{js,jsx}\" --quiet",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,7 +34,9 @@
   "devDependencies": {
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2"
