--- a/src/config/config.env
+++ b/src/config/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://mmAdmins:P4O0H6vCA2zhojPV@mmreviews-tckzj.mongodb.net/mmreviews?retryWrites=true&w=majority
-JWT_KEY=secret
+MONGO_URI=
+JWT_KEY=
